# fractalOpenMp

./: ._EasyBMP  .gitignore  CMakeLists.txt  README.md  complex.cpp  complex.hpp  fractal.cpp  fractal.hpp  fractalmodel.cpp  fractalmodel.hpp  julia.cpp  julia.hpp  main.cpp
EasyBMP/: ._EasyBMP_ChangeLog.txt
